home and get to know page complete

--- a/Mission06_Williams/Views/Home/GetToKnow.cshtml
+++ b/Mission06_Williams/Views/Home/GetToKnow.cshtml
@@ -10,18 +10,16 @@
     <a href="https://www.qwcomedy.com/">Quick Wits Comedy</a>
 </p>
 </div>
-<br /><br />
-
+<br />
 <div>
     <h2>Want more Joel Content?</h2>
     <h6>Click this link:</h6>
     <p>
         <a href="https://baconsale.com/">Bacon Sale Site</a>
     </p>
-    <a href="https://baconsale.com/">Bacon Sale Site
-        <img src="img/baconsalekate.jpg" height="200px" />
+    <br />
+    <a href="https://baconsale.com/">
+        <img src="/img/baconsalekate.jpg" alt="Bacon Sale Kate Image" height="200"/>
     </a>
-    <img src="img/JoelHiltonHeadshot.jpg" height="500px" />
 </div>
-<br />
-<br />
+
