--- a/Mission06_Williams/Views/Home/Index.cshtml
+++ b/Mission06_Williams/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">@ViewData["Title"]</h1>
-    <img src="img/JoelHiltonHeadshot.jpg" height="500px" />
+    <img src="img/JoelHiltonHeadshot.jpg" height="500" />
 </div>
