added in comments

--- a/Mission06_Williams/Views/Home/EnterMovie.cshtml
+++ b/Mission06_Williams/Views/Home/EnterMovie.cshtml
@@ -2,6 +2,7 @@
 
 <h1>Enter a Movie</h1>
 
+<!--the form to submit a movie-->
 <form method="post">
     <label asp-for="Category">Movie Category: </label>
     <input asp-for="Category" required />
