This is my first commit to the branch...let's see if it worked!

--- a/Mission06_Williams/Views/Home/Index.cshtml
+++ b/Mission06_Williams/Views/Home/Index.cshtml
@@ -4,5 +4,6 @@
 
 <div class="text-center">
     <h1 class="display-4">@ViewData["Title"]</h1>
+    <h2>Is my branch working?</h2>
     <img src="img/JoelHiltonHeadshot.jpg" height="500" />
 </div>
