--- a/Mission06_Williams/Views/Shared/_Layout.cshtml
+++ b/Mission06_Williams/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="EnterMovie">Enter a Movie</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MoviesTable">View All Movies</a>
+                        </li>
                     </ul>
                 </div>
             </div>
