--- a/Mission06_Williams/Views/Home/MoviesTable.cshtml
+++ b/Mission06_Williams/Views/Home/MoviesTable.cshtml
@@ -2,7 +2,6 @@
 }
 
 @model List<Movies>
-
 <table class="table  table-bordered">
     <thead class="fw-bold">
         <tr>
@@ -31,9 +30,11 @@
                 <td>@m.LentTo</td>
                 <td>@m.CopiedToPlex</td>
                 <td>@m.Notes</td>
+
+                <td><a class="btn btn-info" asp-controller="Home" asp-action="Edit" asp-route-id="@m.MovieId">Edit</a></td>
+                <td><a class="btn btn-danger" asp-controller="Home" asp-action="Delete" asp-route-id="@m.MovieId">Delete</a></td>
             </tr>
         </tbody>
     }
-
-   
 </table>
+
